--- a/naslovna.html
+++ b/naslovna.html
@@ -1,10 +1,66 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="UTF-8" />
-    <title>DVG COMPANY</title>
-</head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="still.css" </head>
+
 <body>
-    
+    <header class="header">
+        <div class="div1">
+            <div class="logo">
+                <img src="images/Layer_2.jpg" alt="logo" />
+            </div>
+            <div class="jezici">
+                <ul>
+                    <li>
+                        <a href="#" class="active"> Srpski</a>
+                    </li>
+                    <li>
+                        <a href="#"> English</a>
+                    </li>
+                    <li>
+                        <a href="#"> Magyar</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <nav class="navbar">
+            <ul>
+                <li>
+                    <h3> O-NAMA</h3>
+                    <p>vizija za uspeh</p>
+                </li>
+                <li>
+                    <h3> DVG PROIZVODI</h3>
+                    <p>naši proizvodi</p>
+                </li>
+                <li>
+                    <h3>BRENDOVI</h3>
+                    <p>koje zasupamo</p>
+                </li>
+                <li>
+                    <h3>DISTRIBUCIJA</h3>
+                    <p>logistika i operativa</p>
+                </li>
+                <li>
+                    <h3>SARADNJA</h3>
+                    <p>proširenje ponude</p>
+                </li>
+                <li>
+                    <h3>NOVOSTI</h3>
+                    <p>aktuelnosti</p>
+                </li>
+                <li>
+                    <h3>KONTAKT</h3>
+                    <p>kontaktirajte nas</p>
+                </li>
+            </ul>
+        </nav>
+    </header>
+
+
 </body>
+
 </html>
