Uradjena statistika i pocetak slajda2

--- a/naslovna.html
+++ b/naslovna.html
@@ -71,11 +71,11 @@
             </div>
 
             <div class="mySlides fade">
-                <img src="images/Video.png">
+                <img src="images/Video2.png">
             </div>
 
             <div class="mySlides fade">
-                <img src="images/Video.png">
+                <img src="images/Video3.png">
             </div>
 
             <img src="images/arrow-down-circle.png" class="circleImg">
@@ -130,7 +130,6 @@
                 <div class="gore">
                     <div class="naslovVeliki">DVG Company</div>
 
-
                     <div class="naslovMali">
                         <h4 class="sivalinija"> Veleprodaja i maloprodaja kozmetike i kućne hemije </h4>
 
@@ -179,10 +178,65 @@
 
         <div class="velikiMaliNaslovi">
             <h3> DVG Company </h3>
-            <p> u brojkama </p>
+            <p class="linijaBrojka"> u brojkama </p>
         </div>
 
 
+        <div class="statistika">
+            <ul>
+                <li>
+                    <h3> 3000 m2</h3>
+                    <p> Magacinskog prostora</p>
+                </li>
+                <li>
+                    <h3>20</h3>
+                    <p> Vozila </p>
+                </li>
+                <li>
+                    <h3>8</h3>
+                    <p> Komercijalista </p>
+                </li>
+                <li>
+                    <h3>170</h3>
+                    <p> Brendova</p>
+                </li>
+            </ul>
+        </div>
+
+        <div class="najveciDiv">
+            <p class="naslovILinija"> Nasi proizvodi </p>
+            <div class="tekstic">
+                <p> Naše proizvode DVG Cosmetics odlikuje visok kvalitet kojim se dobija kompletna
+                    nega lica I tela.Uspeli smo da uskladimo kvalitet i cenu, što su prepoznali
+                    našI kupci. </p>
+
+            </div>
+
+            <div class="proizvodi">
+                  <div class="pIme">
+                    <img class="kartica" src="images/Rectangle 136.png">
+                    <p>KESE I FOLIJE</p>
+                </div>
+                  <div class="pIme">
+                    <img class="kartica" src="images/Rectangle 137.png">
+                    <p>ZA KUHINJU</p>
+                </div>
+                  <div class="pIme">
+                    <img class="kartica" src="images/Rectangle 138.png">
+                    <p>UBRUSI I TOALET PAPIRI</p>
+                </div>
+                  <div class="pIme">
+                    <img class="kartica" src="images/Rectangle 139.png">
+                    <p>KOZMETIKA</p>
+                </div>
+                  <div class="pIme">
+                    <img class="kartica" src="images/Rectangle 141.png">
+                    <p>PLASTICNE KANTE</p>
+                </div>
+
+        
+        </div>
+        
 
     </main>
 
